                        Dear Emacs, please make this -*-Text-*- mode!

                CHANGES IN tm VERSION 0.4-1

SIGNIFICANT USER-VISIBLE CHANGES

    o   The reader function readNewsgroup() is renamed to readMail().

                CHANGES IN tm VERSION 0.4

SIGNIFICANT USER-VISIBLE CHANGES

    o   The Corpus class is now virtual providing an abstract
        interface.

    o   VCorpus, the default implementation of the abstract corpus
        interface (by subclassing), provides a corpus with volatile (=
        standard R object) semantics. It loads all documents into
        memory, and is designed for small to medium-sized data sets.

    o   PCorpus, an implementation of the abstract corpus interface (by
        subclassing), provides a corpus with permanent storage
        semantics. The actual data is stored in an external database
        (file) object (as supported by the filehash package), with
        automatic (un-)loading into memory. It is designed for systems
        with small memory.

    o   Language codes are now in ISO 639-2 (instead of ISO 639-1).

    o   Reader functions no longer have a load argument for lazy
        loading.

NEW FEATURES

    o   The reader function readReut21578XMLasPlain() was added and
    	combines the functionality of readReut21578XML() and asPlain().

BUG FIXES

    o   weightTfIdf() no longer applies a binary weighting to an input
        matrix in term frequency format (which happened only in 0.3-4).

                CHANGES IN tm VERSION 0.3-4

SIGNIFICANT USER-VISIBLE CHANGES

    o   .onLoad() no longer tries to start a MPI cluster (which often
        failed in misconfigured environments). Use activateCluster()
        and deactivateCluster() instead.

    o   DocumentTermMatrix (the improved reimplementation of defunct
        TermDocMatrix) does not use the Matrix package anymore.

NEW FEATURES

    o   The DirSource() constructor now accepts the two new (optional)