@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
-Version: 0.4-0.2
-Date: 2009-07-04
+Version: 0.4-0.3
+Date: 2009-08-07
 Author: Ingo Feinerer
 Maintainer: Ingo Feinerer <feinerer@logic.at>
 Depends: R (>= 2.7.0), methods
